이름이 hanbit 인 css 파일의 이름을 angel 로 변경.

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@ src="https://www.facebook.com/tr?id=1816595558587562&ev=PageView&noscript=1"/>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W9D5PM3"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <link rel="stylesheet" href="./css/layout-hanbit.css" />
+    <link rel="stylesheet" href="./css/layout-angel.css" />
     <link rel="stylesheet" href="./css/layout-member.css" />
     <link rel="stylesheet" href="./css/layout-network.css" />
     <link rel="stylesheet" href="./css/layout-store.css" />
-    <link rel="stylesheet" href="./css/layout-myhanbit.css" />
+    <link rel="stylesheet" href="./css/layout-myangel.css" />
     <link rel="stylesheet" href="./css/layout-event.css" />
     <!-- 메뉴 바로가기 -->
     <div id="quick_skip_menu">
@@ -168,9 +168,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </ul>
 
                 <ul class="top_menu">
-                    <li><a href="http://www.hanbit.co.kr/member/login.html" class="login">로그인</a></li>
-                    <li><a href="http://www.hanbit.co.kr/member/member_agree.html" class="join">회원가입</a></li>
-                    <li><a href="http://www.hanbit.co.kr/myhanbit/myhanbit.html" class="myhanbit">마이엔젤</a></li>
+                    <li><a href="./html/member/login.html" class="login">로그인</a></li>
+                    <li><a href="./html/member/member_agree.html" class="join">회원가입</a></li>
+                    <li><a href="./html/myAngel/myangel.html" class="myangel">마이엔젤</a></li>
                 </ul>
             </div>
         </nav>
@@ -4312,7 +4312,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <p class="ctxt"><span id='cartmsg'>해당 상품을 장바구니에 담았습니다.</span><span id='cartmsg2'>이미 장바구니에 추가된 상품입니다.</span><br />장바구니로 이동하시겠습니까?</p>
                     <div class="btn_layer">
-                        <a href="/myhanbit/cart.html">장바구니<br />이동</a>
+                        <a href="/myangel/cart.html">장바구니<br />이동</a>
                         <!--<a href="javascript:;" onClick="$('.add_cart_layer').hide();">쇼핑<br />계속</a>-->
                         <a class="cbtn" href="javascript:;" onClick="">쇼핑<br />계속</a>
                     </div>
