"17/09/10 공동작업 결과 업데이트 - jquery의 ajax를 통해 template을 만들어 놓고 그것을 include하는 내용 업데이트 & channel.H의 중간내용"

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
     <meta name="viewport" content="width=1260">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="naver-site-verification" content="823ff8b8e7e3eb396c310703c2bbd731f48c1d9b" />
-    <link rel="stylesheet" href="./css/common.css" />
-    <link href="./css/hover.css" rel="stylesheet" media="all">
-    <link rel="stylesheet" href="./js/jquery.raty.css" />
-    <script type="text/javascript" src="./js/jquery-latest.js"></script>
-    <script type="text/javascript" src="./js/jquery-ui.js"></script>
-    <script type="text/javascript" src="./js/jquery.event.drag-1.5.min.js"></script>
-    <script type="text/javascript" src="./js/jquery.touchSlider.js"></script>
-    <script type="text/javascript" src="./js/jquery.raty.js"></script>
-    <script type="text/javascript" src="./js/main.js"></script>
-    <script type="text/javascript" src="./lib/cheditor/cheditor.js"></script>
-    <script type="text/javascript" src="./js/jquery.ui.datepicker-ko.js"></script>
-    <script type="text/javascript" src="./js/engine.js"></script>
+    <link rel="stylesheet" href="/css/common.css?v=<%=System.currentTimeMillis() %>" />
+    <link rel="stylesheet" href="/css/hover.css?v=<%=System.currentTimeMillis() %>"  media="all">
+    <link rel="stylesheet" href="/js/jquery.raty.css?v=<%=System.currentTimeMillis() %>" />
+    <script type="text/javascript" src="/js/jquery-latest.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/jquery-ui.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/jquery.event.drag-1.5.min.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/jquery.touchSlider.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/jquery.raty.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/main.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/lib/cheditor/cheditor.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/jquery.ui.datepicker-ko.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/engine.js?v=<%=System.currentTimeMillis() %>"></script>
 
     <!-- Start of hanbithelp Zendesk Widget script -->
     <script>
@@ -4331,8 +4331,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span>
 			NOTICE :
 		</span>
-
-            <a href="./html/support/notice_view.html?hnb_idx=261">한빛출판네트워크 본사 사옥이전 안내</a>
+            <a href="/support/notice_view.html?hnb_idx=261">엔젤스터디 사이트 제작 안내</a>
         </div>
         <!-- //공지사항 -->
 
@@ -4341,18 +4340,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="foot_menu">
                 <!-- added by coffin -->
                 <ul>
-                    <li><a href="./html/publisher/index.html">회사소개</a> &#149; <a href="./html/publisher/index.html?lang=e">ENGLISH</a></li>
-                    <li><a href="./html/publisher/write.html" target="_blank">기획 및 원고 모집</a></li>
-                    <li><a href="./html/member/use_agreement.html">이용약관</a></li>
-                    <li><a href="./html/member/privacy_policy.html"><strong>개인정보취급방침</strong></a></li>
-                    <li><a href="./html/sitemap/sitemap.html">사이트맵</a></li>
+                    <li><a href="http://www.hanbit.co.kr/publisher/index.html">스터디소개</a> &#149; <a href="http://www.hanbit.co.kr/publisher/index.html?lang=e">ENGLISH</a></li>
+                    <li><a href="http://www.hanbit.co.kr/publisher/write.html" target="_blank">기획 및 원고 모집</a></li>
+                    <li><a href="http://www.hanbit.co.kr/member/use_agreement.html">이용약관</a></li>
+                    <li><a href="http://www.hanbit.co.kr/member/privacy_policy.html"><strong>개인정보취급방침</strong></a></li>
+                    <li><a href="http://www.hanbit.co.kr/sitemap/sitemap.html">사이트맵</a></li>
                 </ul>
             </div>
             <!-- //하단 메뉴 -->
 
             <!-- SNS -->
             <div class="foot_sns">
-
                 <ul>
                     <li class="foot_facebook"><a href="https://www.facebook.com/" target="_blank"><span>페이스북</span></a></li>
                     <li class="foot_googleplus"><a href="https://plus.google.com/" target="_blank"><span>구글플러스</span></a></li>
