--- a/channel/channel_submain.html
+++ b/channel/channel_submain.html
@@ -42,18 +42,18 @@
     <meta name="viewport" content="width=1260">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="naver-site-verification" content="823ff8b8e7e3eb396c310703c2bbd731f48c1d9b" />
-    <link rel="stylesheet" href="/css/common.css?v=1" />
-    <link rel="stylesheet" href="/css/hover.css?v=1"  media="all">
-    <link rel="stylesheet" href="/js/jquery.raty.css?v=1" />
-    <script type="text/javascript" src="/js/jquery-latest.js?v=1"></script>
-    <script type="text/javascript" src="/js/jquery-ui.js?v=1"></script>
-    <script type="text/javascript" src="/js/jquery.event.drag-1.5.min.js?v=1"></script>
-    <script type="text/javascript" src="/js/jquery.touchSlider.js?v=1"></script>
-    <script type="text/javascript" src="/js/jquery.raty.js?v=1"></script>
-    <script type="text/javascript" src="/js/main.js?v=1"></script>
-    <script type="text/javascript" src="/lib/cheditor/cheditor.js?v=1"></script>
-    <script type="text/javascript" src="/js/jquery.ui.datepicker-ko.js?v=1"></script>
-    <script type="text/javascript" src="/js/engine.js?v=1"></script>
+    <link rel="stylesheet" href="/css/common.css?v=<%=System.currentTimeMillis() %>" />
+    <link rel="stylesheet" href="/css/hover.css?v=<%=System.currentTimeMillis() %>"  media="all">
+    <link rel="stylesheet" href="/js/jquery.raty.css?v=<%=System.currentTimeMillis() %>" />
+    <script type="text/javascript" src="/js/jquery-latest.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/jquery-ui.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/jquery.event.drag-1.5.min.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/jquery.touchSlider.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/jquery.raty.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/main.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/lib/cheditor/cheditor.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/jquery.ui.datepicker-ko.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="/js/engine.js?v=<%=System.currentTimeMillis() %>"></script>
 
     <!-- Start of hanbithelp Zendesk Widget script -->
 <script>/*<![CDATA[*/window.zEmbed||function(e,t){var n,o,d,i,s,a=[],r=document.createElement("iframe");window.zEmbed=function(){a.push(arguments)},window.zE=window.zE||window.zEmbed,r.src="javascript:false",r.title="",r.role="presentation",(r.frameElement||r).style.cssText="display: none",d=document.getElementsByTagName("script"),d=d[d.length-1],d.parentNode.insertBefore(r,d),i=r.contentWindow,s=i.document;try{o=s}catch(c){n=document.domain,r.src='javascript:var d=document.open();d.domain="'+n+'";void(0);',o=s}o.open()._l=function(){var o=this.createElement("script");n&&(this.domain=n),o.id="js-iframe-async",o.src=e,this.t=+new Date,this.zendeskHost=t,this.zEQueue=a,this.body.appendChild(o)},o.write('<body onload="document._l();">'),o.close()}("https://assets.zendesk.com/embeddable_framework/main.js","hanbithelp.zendesk.com");
@@ -96,12 +96,12 @@ src="https://www.facebook.com/tr?id=1816595558587562&ev=PageView
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W9D5PM3"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) --><link rel="stylesheet" href="/css/layout-angel.css" />
-<link rel="stylesheet" href="/css/layout-member.css?v=1" />
-<link rel="stylesheet" href="/css/layout-network.css?v=1" />
-<link rel="stylesheet" href="/css/layout-store.css?v=1" />
-<link rel="stylesheet" href="/css/layout-myhanbit.css?v=1" />
-<link rel="stylesheet" href="/css/layout-event.css?v=1" />
+<!-- End Google Tag Manager (noscript) --><link rel="stylesheet" href="/css/layout-hanbit.css" />
+<link rel="stylesheet" href="/css/layout-member.css" />
+<link rel="stylesheet" href="/css/layout-network.css" />
+<link rel="stylesheet" href="/css/layout-store.css" />
+<link rel="stylesheet" href="/css/layout-myhanbit.css" />
+<link rel="stylesheet" href="/css/layout-event.css" />
 <!-- 메뉴 바로가기 -->
 <div id="quick_skip_menu">
   <a href="#gnb" onclick="document.getElementById('gnb').tabIndex = -1;document.getElementById('gnb').focus();return false;"><span>메뉴 바로가기</span></a>
@@ -117,11 +117,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div id="wrap_nav">
 			<ul class="top_brand">
 				<li><a href="http://www.hanbit.co.kr/index.html" name="hanbit_network"><span>HOME</span></a></li>
-				<li><a href="http://www.hanbit.co.kr/media/">신승엽</a></li>
-                <li><a href="http://www.hanbit.co.kr/academy/">송은정</a></li>
-                <li><a href="http://www.hanbit.co.kr/biz/">박재오</a></li>
-                <li><a href="http://www.hanbit.co.kr/life/">임지호</a></li>
-                <li><a href="http://www.hanbit.co.kr/edu/">김관현</a></li>
+				<li><a href="http://www.hanbit.co.kr/media/">한빛미디어</a></li>
+				<li><a href="http://www.hanbit.co.kr/academy/">한빛아카데미</a></li>
+				<li><a href="http://www.hanbit.co.kr/biz/">한빛비즈</a></li>
+				<li><a href="http://www.hanbit.co.kr/life/">한빛라이프</a></li>
+				<li><a href="http://www.hanbit.co.kr/edu/">한빛에듀</a></li>
+				<li><a href="http://www.hanbit.co.kr/realtime/">리얼타임</a></li>
+				<li><a href="http://www.hanbit.co.kr/textbook/">한빛정보교과서</a></li>
 			</ul>
 			
 			<ul class="top_menu">
