include.html 수정 & store_submain.html 작성 & store/new_book_list.html 작성

--- a/store_submain.html
+++ b/store_submain.html
@@ -325,16 +325,16 @@
         
 
         <!-- 실제 바디(정보영역) -->
-
-
-
+        <div id="new_book_list"></div>
+        <script> $("#new_book_list").load("html/store/books/new_book_list.html");
+        </script>
         <!-- 푸터 -->
         <footer>
             <!-- 공지사항 -->
             <div class="foot_notice">
                 <span>
-			NOTICE :
-		</span>
+            NOTICE :
+        </span>
 
                 <a href="../support/notice_view.html?hnb_idx=261">엔젤스터디 사이트 제작 안내</a>
             </div>
