store edu_view.html, edu_list.html 작성

--- a/html/store/books/bestseller_list.html
+++ b/html/store/books/bestseller_list.html
@@ -6,9 +6,6 @@
         height: 100%;
         margin: 0 auto;
     }
-    #bestseller_area {
-        
-    }
     #bs_title {
         float: left;
         font-size: 20px;
@@ -20,7 +17,8 @@
     #bs_view_list {
         position: absolute;
         top:50px;
-        left:10px;
+        left:20px;
+        margin-top: 20px;
     }
     .bs_view_box {
         display: inline-block;
