--- a/store_submain.html
+++ b/store_submain.html
@@ -141,10 +141,18 @@
         <script>
             $("#bestseller_list").load("html/store/books/bestseller_list.html");
         </script>
+        <div id="edu_view"></div>
+        <script>
+            $("#edu_view").load("html/store/education/edu_view.html");
+        </script>
+        <div id="itemNmaker"></div>
+        <script>
+            $("#itemNmaker").load("html/store/education/edu_list.html");
+        </script>
         <!-- 푸터 -->
         <style>
             footer {
-                top:2000px;    
+                top:1800px;    
             }
         </style>
         <footer>
